--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             padding: 0;
             margin: 0;
         }
+        .svg-wrap {
+            padding: 40px;
+        }
         .box {
             position: absolute;
             left: 20px;
