--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             height: 40px;
             box-sizing: border-box;
             background-color: bisque;
-            animation: move 5s ease;
+            animation: move 5s linear;
             offset: path('M0.5 0.5L571 87L14.5 205.5L552 326.5L14.5 417') auto;
 
         }
